Ajustando o conteudo do card

--- a/Noticias/styles/section.css
+++ b/Noticias/styles/section.css
@@ -23,5 +23,17 @@
       180deg, /**/
       transparent 0%, /*a cor q vc quer */
       #020617 100% /*a cor q pegou no figma e ate aonde ela vai*/
-    );}
+    );
+  }
+
+  figcaption{
+    position: absolute;
+    bottom: 0;
+
+    padding: 24px;
+
+    h2{
+      margin-top: 8px;
+    }
+  }
 }
