--- a/Noticias/styles/global.css
+++ b/Noticias/styles/global.css
@@ -52,3 +52,16 @@ img{
 main{
   margin-top: 40px;
 }
+
+.content-tag{ /*display: inline-block ele faz um calculo para nos para deixar justo no padrão q eu queira */
+  display: inline-block;
+  background-color: var(--brand-color-dark);
+
+  padding: 4px 8px;
+  border-radius: 4px;
+  font:500 10px/1.2 var(--font-family);
+  text-transform: uppercase;
+  letter-spacing: 0.04em; /*letter-spacing é o espaçamento entre palavras;*/
+  color: var(--text-color-primary);
+  box-shadow: 0px 4px 16px rgba(2, 6, 23, 0.251);
+}
