--- a/Noticias/styles/section.css
+++ b/Noticias/styles/section.css
@@ -32,6 +32,11 @@
 
     padding: 24px;
 
+    &:has(.text-lg){ /*has é tipo observador e pra entender mlhr faço essa pergunta dentro do figcatipon tem .text-lg se tem coloque padding: ou qlq outra coisa;*/
+      padding: 12px;
+
+    }
+
     h2{
       margin-top: 8px;
     }
