--- a/Noticias/styles/global.css
+++ b/Noticias/styles/global.css
@@ -51,6 +51,7 @@ img{
  
 main{
   margin-top: 40px;
+  gap: 80px;
 }
 
 .content-tag{ /*display: inline-block ele faz um calculo para nos para deixar justo no padrão q eu queira */
