--- a/Noticias/styles/section.css
+++ b/Noticias/styles/section.css
@@ -1,3 +1,27 @@
+section header{
+  border-top: 1px solid var(--stroke-color);
+  padding-block: 12px 24px;
+  font: var(--text-span);
+
+  a {
+    justify-self: end;
+    align-items: center;
+    gap: 8px;
+  
+    span{
+      background-image: url(../assests/icons/ArrowRight.svg);
+      width: 16px;
+      height: 16px;
+    }
+
+    &:hover span{
+      background-image: url(../assests/icons/ArrowRight-hover.svg);
+
+    }
+  }
+  
+}
+
 #featured{
   img{
     height: 100%;
@@ -41,4 +65,33 @@
       margin-top: 8px;
     }
   }
+}
+
+#weekly{
+  
+  &>div{/*primeiro nivel da div */
+    grid-template-columns: repeat(4, 292px); /*4 é a vezes vai se repetir de maneira flexiveis */
+
+
+}
+  img{
+  height: 160px;
+
+}
+
+figure{
+  position: relative;
+
+
+.content-tag{
+  position: absolute;
+  top: 8px;
+  left: 8px;
+}
+
+p {
+  margin-top: 8px;
+  font: 800;
+}
+}
 }
