estilizando os ultimos card

--- a/Noticias/styles/section.css
+++ b/Noticias/styles/section.css
@@ -23,20 +23,18 @@ section header{
 }
 
 #featured{
-  img{
+  grid-area: featured;
+
+  img {
     height: 100%;
     object-fit: cover;
-    border-radius: 4px;
 
   }
-}
 
-.card {/*mesma coisa que  card::before*/
-
+ .card {/*mesma coisa que  card::before*/
   position: relative; 
   overflow: hidden;
   border-radius: 4px;
-
 
   &::before{
     content:"";
@@ -49,6 +47,7 @@ section header{
       #020617 100% /*a cor q pegou no figma e ate aonde ela vai*/
     );
   }
+
 
   figcaption{
     position: absolute;
@@ -67,9 +66,14 @@ section header{
   }
 }
 
+}
+
+
+
 #weekly{
+  grid-area: weekly;
   
-  &>div{/*primeiro nivel da div */
+  &> div{/*primeiro nivel da div */
     grid-template-columns: repeat(4, 292px); /*4 é a vezes vai se repetir de maneira flexiveis */
 
 
@@ -94,4 +98,36 @@ p {
   font-weight: 800;
 }
 }
+}
+
+#ai{
+  grid-area: ai;
+  
+  img{
+    width: 176px;
+    aspect-ratio: 1/1;
+    object-fit: cover;
+  }
+
+  h3{
+    margin-block: 8px 4px;
+  }
+}
+
+aside{
+  grid-area: aside;
+}
+
+#more{
+  margin-top: 32px;
+
+  h3{
+    margin-top: 8px;
+  }
+
+  img{
+    width: 72px;
+    aspect-ratio: 1/1;
+    object-fit: cover;
+  }
 }
