--- a/formulario2/style/filds/index.css
+++ b/formulario2/style/filds/index.css
@@ -1,99 +1,4 @@
+@import url(inputs.css);
 @import url(droparea.css);
+@import url(radio.css);
 
-input, textarea, select{
-  appearance: none;
-  width: 100%;
-  border: .5rem;
-  border: 1px solid var(--stroke-default);
-
-  padding: .75rem 1rem;
-  font: var(--text);
-
-}
-
-label{
-  font: var(--text-sm);
-  color: var(--text-secondary);
-
-  display: block;
-  margin-bottom: .25rem;
-}
-
-input:focus,
-select:focus,
-textarea:focus,
-input[type="date"]:focus-within{ /*focus-within significa q ele vai pesquisar se todos q estão aqui tão em foco*/
-  outline: .25rem solid var(--surface-secondary);
-  border: .125rem solid var(--stroke-highlight);
-  outline-offset: .1px; /* para o safari*/
-}
-
-input[type="date"]{
-  position: relative;
-  &::-webkit-calendar-picker-indicator{
-    opacity: 0;
-  }
-  
-  &::before{
-    content: "";
-    position: absolute;
-    background: url(../../assests/icons/calendar-03.svg) center/contain;
-    right: 1rem;
-    width: 1.25rem;
-    height: 1.25rem;
-
-    top: 50%; /*modo de centralizar com o position*/
-    transform: translateY(-50%);
-  }
-
-
-}
-
-select{
-  background: url(../../assests/icons/arrow-down-01.svg)
-  no-repeat calc(100% - 1rem); /*esse calc é uma função q faz um calculo e esse 1rem seria os 16px */
-}
-
-.address .flex {
-  gap: 1.25rem;
-}
-
-.input-wrapper:has([disabled]){
-  opacity: .5;
-}
-
-input{
-  &[disabled]{
-    background-color: var(--surface-disabled);
-    border: 1px solid var(--stroke-default);
-
-    color: var(--text-primary);
-  }
-
-  &:invalid{
-    border: 0.125rem solid var(--semantic-error);
-  }
-  & + small{
-    font: var(--text-sm);
-    color: #78716c;
-
-
-    display: inline-block;
-    margin-top: .25rem;
-  }
-
-  &[required] + .error {
-    display: flex;
-    align-items: center;
-    gap: .25rem;
-
-    color: var(--semantic-error);
-    font: var(--text-sm);
-
-    margin-top: .25rem;
-  }
-
-  &:not(:focus):valid + .error{ /* para tirar a msg a baixo q esta invalido...not(:focus) é para dizer q ele n esta foco e o valid q é verificar se esta valido  pega o error  e tira ele*/
-    display: none;
-  }
-}
