--- a/zingen/styles/buttons.css
+++ b/zingen/styles/buttons.css
@@ -2,7 +2,7 @@
   --btn-bg-color:var(--text-color-primary);
   --btn-color:var(--bg-color);
   border: 0;
-  background-color: transparent;
+
 
   display: flex;
   align-items: center;
@@ -17,10 +17,14 @@
   background: var(--btn-bg-color);
   color: var(--btn-color);
 }
+
 .btn:hover{
 --btn-bg-color: linear-gradient(90deg, var(--brand-color-secondary) 0%, var(--brand-color-primary) 100%);
 
 --btn-color: var(--surface-color);
+-webkit-background-clip: initial;
+background-clip: initial;
+color: var(--btn-color);
 }
 
 .btn-sm{
@@ -55,6 +59,19 @@
   color: transparent;
   position: relative;
   z-index: 1;
+}
+
+}
+
+@media (width >= 80em){
+
+.btn-sm{
+  padding: .75rem 1.5rem;
+  font-size: var(--fs-base);
+}
+.btn-md{
+  padding: 1rem 2rem;
+  font-size: 1.125rem ;
 }
 
 }
