--- a/zingen/styles/utility.css
+++ b/zingen/styles/utility.css
@@ -11,16 +11,23 @@
 }
 
 .px-lg{
-  padding-inline
-  : var(--px-lg);
+  padding-inline: var(--px-lg);
 }
 
 .flex{
   display: flex;
 }
 
+.items-center{
+align-items: center;
+}
+
 .gap-1{
   gap: 1rem;
+}
+
+.gap-1\.5{
+  gap: 1.5rem;
 }
 
 .grid{
@@ -32,7 +39,7 @@
   --max-width: 375px;
   width: min(var(--max-width), 100% - var(--px-lg) * 2); /*padding do eixo x px*/
   margin-inline: auto;
-  border: solid violet;
+/*  border: solid violet;*/
 }
 
 .desktop-only{
@@ -46,7 +53,7 @@
 
 @media (width >= 80em){
 .container{
-  max-width: 80rem;
+  --max-width: 80rem;
 }
 
 .desktop-only{
