--- a/zingen/styles/buttons.css
+++ b/zingen/styles/buttons.css
@@ -11,7 +11,7 @@
 
   border-radius: .5rem;
 
-  font: var(--fw-md) var(--fs-base)/1.5rem var(--ff-sans);
+  font: var(--fw-md) var(--fs-base)/1.5rem var(--font-family);
 
   cursor: pointer;
   background: var(--btn-bg-color);
