--- a/Patins/styles/global.css
+++ b/Patins/styles/global.css
@@ -10,6 +10,7 @@
   --snitap-sky-light:#67E8F9;
   --snitap-joy-mid:#DB2777;
   --snitap-joy-light:#F472B6;
+  --snitap-leaf-mid:#16a34a;
 
   /*Color base*/
   --text:#000000;
