--- a/Patins/styles/header.css
+++ b/Patins/styles/header.css
@@ -2,6 +2,8 @@ header{
   max-width: 80rem;
   width: 100%;
   padding: 1.25rem 2rem;
+  margin-inline: auto;/*para deixar tudo alinhado qnd diminuir o tamanho da tela*/
+
 
   display: flex;
   align-items: center;
