--- a/Patins/styles/global.css
+++ b/Patins/styles/global.css
@@ -23,11 +23,14 @@
   --text-xl:4rem;
 
 }
-htmt, button{
+html, button{
     /*Fontes*/
   font: 500 1rem/1.5 var(--ff-base);
 }
 
+html{
+ zoom: .5;
+}
 
 
 h1, h2{
